# labdojo

./: .dockerignore  .env.example  .gitignore  .replit  CONTRIBUTING.md  DAY0_QUICKSTART.md  DEPLOY.md  Dockerfile  INSTALL_MACOS.txt  INSTALL_WINDOWS.txt  LICENSE  LabDojo_Installer.bat  LabDojo_Installer.command  LabDojo_Launcher.html  README.md  labdojo.py  pyproject.toml  railway.toml  replit.nix  science_catalog.json  test_labdojo.py
.devcontainer/: devcontainer.json
docker/: Dockerfile  inference_server.py
labdojo/: __init__.py  __main__.py
labdojo-ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
labdojo-ui/src/: App.tsx  index.css
labdojo-ui/src/components/: Sidebar.tsx
labdojo-ui/src/lib/: api.ts
labdojo-ui/src/pages/: ApisPage.tsx  ChatPage.tsx  PapersPage.tsx  PipelinesPage.tsx  ProjectsPage.tsx  SettingsPage.tsx
labdojo/ai/: __init__.py
labdojo/apis/: __init__.py
labdojo/core/: __init__.py
labdojo/pipelines/: __init__.py
labdojo/ui/: __init__.py
scripts/: setup_serverless.sh
tests/: test_core.py
